--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "author": {
+    "name": "Rodrigo Zan",
+    "email": "rodrigo.zandonadi.dev@gmail.com",
+    "url": "https://medium.com/code-write"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rodrigozan/invez-ti"
+  },
+  "scripts": {
+    "start:dev": "nodemon",
+    "start": "node dist/index.js",
+    "build": "npx tsc"
+  },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
