--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,12 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/helmet": "^4.0.0",
@@ -34,6 +37,8 @@
     "@types/morgan": "^1.9.10",
     "@types/mssql": "^9.1.7",
     "@types/node": "^24.3.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
